identified correct h2 and aligned right

--- a/css/style.css
+++ b/css/style.css
@@ -64,8 +64,9 @@ img[alt="captain picard"] {
 tr {
 	background-color: #282825;
 	color: #00DC00;
+	text-align: left;
 }
-.professional-skillz {
+.professional-skillz > div > h2 {
 	text-align: right;
 }
 
